--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,9 @@
-spring.datasource.url =jdbc:h2:mem:carrentdb
-spring.datasource.username = root
-spring.datasource.password = root
-spring.datasource.driverClassName = org.h2.Driver
-#????????????????????resources/schema.sql????????????????????????
+server.port=8080
+spring.datasource.url=jdbc:h2:mem:carrentdb
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.schema=classpath:schema.sql
-#????????????????????resources/data.sql????????????????????????
 spring.datasource.data=classpath:data.sql
-# ???????
-#spring.jpa.database = H2
-## ??????????????
-#spring.jpa.show-sql = true
+spring.jpa.database=H2
+spring.jpa.show-sql=true
